# telegram-digestion

./: .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
app/: __main__.py  config.py
app/bot/: create.py  formatting.py  keyboards.py  middlewares.py  states.py
app/bot/handlers/: digest.py  schedule.py  settings.py  sources.py  start.py
app/db/: engine.py  migrations.py  models.py  repository.py
app/digest/: chunker.py  generator.py  prompts.py
app/llm/: client.py
app/scheduler/: manager.py
app/userbot/: client.py  collector.py  resolver.py
